---
source: crates/agent/src/integration_tests/user_discovers.rs
expression: published_specs
---
[
    (
        "squirrels/acorns",
        Some(
            "collection",
        ),
        Some(
            Object {
                "key": Array [
                    String("/id"),
                ],
                "schema": Object {
                    "$defs": Object {
                        "flow://connector-schema": Object {
                            "$id": String("flow://connector-schema"),
                            "properties": Object {
                                "id": Object {
                                    "type": String("string"),
                                },
                                "nuttiness": Object {
                                    "maximum": Number(1),
                                    "type": String("number"),
                                },
                            },
                            "required": Array [
                                String("id"),
                            ],
                            "type": String("object"),
                        },
                    },
                    "$ref": String("flow://connector-schema"),
                },
            },
        ),
    ),
    (
        "squirrels/capture-1",
        Some(
            "capture",
        ),
        Some(
            Object {
                "autoDiscover": Object {
                    "addNewBindings": Bool(true),
                    "evolveIncompatibleCollections": Bool(true),
                },
                "bindings": Array [
                    Object {
                        "resource": Object {
                            "_meta": Object {
                                "path": Array [
                                    String("acorns"),
                                ],
                            },
                            "id": String("acorns"),
                        },
                        "target": String("squirrels/acorns"),
                    },
                    Object {
                        "disable": Bool(true),
                        "resource": Object {
                            "_meta": Object {
                                "path": Array [
                                    String("crab apples"),
                                ],
                            },
                            "id": String("crab apples"),
                        },
                        "target": String("squirrels/crab_apples"),
                    },
                    Object {
                        "resource": Object {
                            "_meta": Object {
                                "path": Array [
                                    String("walnuts"),
                                ],
                            },
                            "id": String("walnuts"),
                        },
                        "target": String("squirrels/walnuts"),
                    },
                ],
                "endpoint": Object {
                    "connector": Object {
                        "config": Object {
                            "tail": String("shake"),
                        },
                        "image": String("source/test:test"),
                    },
                },
            },
        ),
    ),
    (
        "squirrels/walnuts",
        Some(
            "collection",
        ),
        Some(
            Object {
                "key": Array [
                    String("/id"),
                ],
                "schema": Object {
                    "$defs": Object {
                        "flow://connector-schema": Object {
                            "$id": String("flow://connector-schema"),
                            "properties": Object {
                                "id": Object {
                                    "type": String("string"),
                                },
                                "nuttiness": Object {
                                    "maximum": Number(1),
                                    "type": String("number"),
                                },
                            },
                            "required": Array [
                                String("id"),
                            ],
                            "type": String("object"),
                        },
                    },
                    "$ref": String("flow://connector-schema"),
                },
            },
        ),
    ),
]
